footer position changed. Corrected the issue on mobile it disappears, it should be fixed now

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,6 +284,8 @@ table .message-alert {
 
 footer {
     height: 53px;
+    position: fixed;
+    bottom: 0;
 }
 
 /* SOCIAL ICON space between them*/
